--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.kazuki43zoo.examples</groupId>
+	<groupId>com.dxc.examples</groupId>
 	<artifactId>mybatis-spring-boot-jpetstore</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -41,8 +41,8 @@
 
 	<developers>
 		<developer>
-			<id>kazuki43zoo</id>
-			<name>Kazuki Shimizu</name>
+			<id>leerosales</id>
+			<name>DXC Technology</name>
 			<email>kazuki43zoo@gmail.com</email>
 		</developer>
 	</developers>
@@ -147,6 +147,33 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>2.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>2.3.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
+		<dependency>
+			<groupId>net.masterthought</groupId>
+			<artifactId>cucumber-reporting</artifactId>
+			<version>5.3.0</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -217,6 +244,11 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<argLine>${jacocoArgs}</argLine>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<testSourceDirectory>cucumber/src/test/java</testSourceDirectory>
+					<includes>
+						<include>**/*Runner.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
