--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.dxc.examples</groupId>
-	<artifactId>mybatis-spring-boot-jpetstore</artifactId>
+	<artifactId>dxcjpetstore</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>jpetstore on spring-boot + mybatis + thymeleaf</name>
 	<description>A sample web application built on MyBatis 3, Spring Boot and Thymeleaf 3</description>
