--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.dxc.examples</groupId>
 	<artifactId>dxcjpetstore</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>jpetstore on spring-boot + mybatis + thymeleaf</name>
 	<description>A sample web application built on MyBatis 3, Spring Boot and Thymeleaf 3</description>
